# TrendX

./: .env  README.md  env.example  pyproject.toml  start_background.sh  stop_background.sh  test_uiautomator.py  ui_dump.xml  ui_dump_after_compose.xml  ui_dump_after_plus.xml  ui_dump_ana_sayfa.xml  ui_dump_compose.xml  ui_dump_compose_after_click.xml  ui_dump_compose_open.xml  ui_dump_compose_screen.xml  ui_dump_current.xml  ui_dump_current_state.xml  ui_dump_speed_dial.xml  ui_dump_speed_dial_now.xml  ui_dump_speed_dial_open.xml
.data/: trendx.db
tests/: __init__.py  test_aggregator.py  test_ai.py  test_sources.py
trendx/: __init__.py  __main__.py  cli.py
trendx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
trendx/aggregator/: __init__.py  aggregator.py  deduplicator.py  scorer.py
trendx/ai/: __init__.py  base.py  mock_generator.py  openai_generator.py
trendx/common/: __init__.py  config.py  database.py  logging.py  models.py
trendx/publisher/: __init__.py  base.py  mock_publisher.py  selenium_twitter_publisher.py  twitter_publisher.py  uiautomator_twitter_publisher.py
trendx/scheduler/: __init__.py  scheduler.py
trendx/sources/: __init__.py  base.py  google_trends.py  reddit.py  selenium_trends.py  simple_trends_fixed.py  twitter_trends.py
trendx/web/: __init__.py  app.py
